@@ -1,3 +1,13 @@
+2018-03-09  Richard Larsson <ric.larsson@gmail.com>
+
+	* arts-2-3-980
+	
+	* src/zeeman.cc:  Update to Zeeman calculations after review
+	Mostly adds a new constant, GL, to the central equations
+	that is presently set to 1 wihle waiting for data input.
+	Might update to take nuclear spin into account at a later
+	time
+
 2018-03-07  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-979
